# mne-gui-addons

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: automerge.yml  circle_artifacts.yml  release.yml  style.yml  tests.yml  unit_tests.yml
doc/: conf.py  index.rst  references.bib
doc/sphinxext/: mne_gui_addons_doc_utils.py
examples/: evoked_ers_source_power.py  group.py  ieeg_locate.py  locate_microgrid.py  volume_stc_group_study.py
mne_gui_addons/: __init__.py  _core.py  _ieeg_locate.py  _segment.py  _vol_stc.py  conftest.py
mne_gui_addons/_utils/: docs.py
mne_gui_addons/tests/: test_basic.py  test_core.py  test_ieeg_locate.py  test_segment.py  test_vol_stc.py
