[project]
name = "mne-gui-addons"
description = "MNE-Python GUI addons."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["science", "neuroscience", "psychology"]
authors = [
  {name = "Alex Rockhill", email = "aprockhill@mailbox.org"},
  {name = "Eric Larson"},
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python"
]
dependencies = [
    "packaging",
    "qtpy",
    "PyQt6!=6.6.0",
    "PyQt6-Qt6!=6.6.0,!=6.7.0",
    "pyvista",
    "pyvistaqt",
    "mne",
    "nibabel",
    "dipy>=1.4",
    "traitlets",
    "setuptools >=65",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "black",  # function signature formatting
    "sphinx-gallery",
    "imageio-ffmpeg>=0.4.1",
]

[project.urls]
homepage = "https://github.com/mne-tools/mne-gui-addons"
repository = "https://github.com/mne-tools/mne-gui-addons"
changelog = "https://github.com/mne-tools/mne-gui-addons/releases"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
tag_regex = "^(?P<prefix>v)?(?P<version>[0-9.]+)(?P<suffix>.*)?$"
version_scheme = "release-branch-semver"

[tool.setuptools.packages.find]
exclude = ["false"]  # on CircleCI this folder appears during pip install -ve. for an unknown reason

[tool.codespell]
skip = "docs/site/*,*.html,steps/freesurfer/contrib/*"
ignore-words = "ignore_words.txt"
builtin = "clear,rare,informal,names,usage"
quiet-level = 3
interactive = 3
enable-colors = ""
count = ""

[tool.pytest.ini_options]
addopts = "-ra -vv --tb=short --cov=mne_gui_addons --cov-report= --junit-xml=junit-results.xml --durations=10"
testpaths = [
    "mne_gui_addons",
]
junit_family = "xunit2"
markers = [
    "allow_unclosed_pyside2: temporary fix for marker only on dev, remove on mne-python 1.6 release", "serial",
    "allow_unclosed: temporary fix for marker only on dev, remove on mne-python 1.6 release", "serial",
]

[tool.ruff.lint]
ignore = [
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D413",  # Missing blank line after last section
]
select = ["A", "B006", "D", "E", "F", "I", "UP", "UP031", "W"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = [
  "mne.utils.copy_doc",
  "mne.utils.copy_function_doc_to_method_doc",
  "mne.utils.deprecated",
  "property",
  "setter",
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = [
  "D205",  # 1 blank line required between summary line and description
  "D400",  # First line should end with a period
]
